--- a/style/main.css
+++ b/style/main.css
@@ -48,3 +48,71 @@ hr {
   font-family: Arial, Helvetica, sans-serif;
   padding: 5px;
 }
+
+.book-container {
+  border: 2px solid rgb(61, 58, 58);
+  box-shadow: 0 20px 20px -20px #a8a5a5;
+  width: 70%;
+  margin: 0 auto;
+}
+
+.book-info {
+  display: flex;
+  flex-direction: row;
+  gap: 5px;
+}
+
+.separation-book-form {
+  margin: 1vw auto 2vw;
+  border:none;
+  height: 20px;
+ 	width: 20%;
+	height: 50px;
+	border-bottom: 1px solid #1f1209;
+	box-shadow: 0 20px 20px -20px #333;
+}
+
+.form-title {
+  padding-top: 1vw;
+}
+
+.grey {
+  background: #cfceceb9;
+}
+
+ul {
+  margin: 0;
+}
+
+#book-list {
+  margin: 0;
+  padding: 0;
+}
+
+.form-input {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+#add-form {
+  align-self: center;
+  width: auto;
+}
+
+.add-book-btn {
+  align-self: flex-end;
+  background: #fff;
+  box-shadow: 3px 5px #393939;
+  margin-right: 5px;
+}
+
+#remove-btn {
+  font-size: 14px;
+  background: #fff;
+  box-shadow: 3px 5px #393939;
+  margin-top: 3px;
+  margin-right: 10px;
+  margin-bottom: 7px;
+  padding: 5px 10px;
+}
